# indexed-merkle-tree-halo2-scroll

./: Cargo.toml
src/: indexed_merkle_tree.rs  lib.rs  merkle_treee.rs  utils.rs
src/chip/: insert_leaf_chip.rs  is_less_than_chip.rs  less_than_chip.rs  merkle_tree_chip.rs  mod.rs  utils.rs
src/circuit/: insert_leaf_circuit.rs  merkle_tree_circuit.rs  mod.rs  sparse_idx_tree.rs
