[package]
name = "indexed-merkle-tree-scroll"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git" }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2.git" }
poseidon = { git = "https://github.com/scroll-tech/poseidon.git"}
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git" }
#poseidon-circuit = { git = "https://github.com/scroll-tech/poseidon-circuit", branch = "main" }